# autodrone_ws

./: .gitignore  DRONE_SPAWN_ERROR_ANALYSIS.md  README.md
.parallel_sim/: latest.tsv  parallel_instances_20260320_171540.tsv
backups/: iicc26_before_parallel_20260320_165606.meta.txt
install/sjtu_drone_bringup/share/sjtu_drone_bringup/: package.dsv  package.ps1  package.sh
install/sjtu_drone_control/share/sjtu_drone_control/: package.dsv  package.ps1  package.sh
log/: gazebo_launch.out  latest_build
src/Diagram/: .$systemDiagram.drawio.dtmp  drone_landing_paper_draft.md  systemDiagram.drawio  제목 없는 다이어그램.drawio
src/sjtu_drone-ros2/: .gitignore  README.md
src/sjtu_drone-ros2/autolanding_orchestrator_cpp/: CMakeLists.txt  package.xml
src/sjtu_drone-ros2/autolanding_orchestrator_cpp/src/: autolanding_orchestrator_node.cpp
src/sjtu_drone-ros2/matlab/: AutoSim.m  AutoSimCollect.m  AutoSimMain.m  AutoSimPaperPlots.m  AutoSimTrain.m  AutoSimValidation.m  README.md  ROS2_Gazebo_MATLAB_Validation_Guideline.md  auto_landing_pipeline_matlab.m  landing_decision_matlab.m  startWindPublisher.m  wind_publisher_matlab.m
src/sjtu_drone-ros2/matlab/data/: OBS_ASOS_MI_20260309231031.csv  autosim_checkpoint_latest.mat  autosim_dataset_latest.csv  (+12 more)
src/sjtu_drone-ros2/scripts/: backup_before_parallel.sh  run_parallel_gazebo.sh  stop_parallel_gazebo.sh
src/sjtu_drone-ros2/sjtu_drone_bringup/: package.xml
src/sjtu_drone-ros2/sjtu_drone_control/: setup.py
src/sjtu_drone-ros2/sjtu_drone_description/: CMakeLists.txt  package.xml
video/: 스크린캐스트 03-21-2026 08:49:29 PM.webm
(+875 files in other folders)
